--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
+plugins {
+  id "org.sonarqube" version "3.1.1"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "fokaefs_AltoroJ"
+    property "sonar.organization", "fokaefs-github"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
 
 apply plugin: 'war'
 
